--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Description history of origin of the croissant - one of the most delicious types of pastries">
     <link rel="stylesheet" href="style.css" />
-    <title>Croissant</title>
+    <title>History of origin of the Croissant at Croissant.com</title>
   </head>
   <body>
     <h1> &#129360 Croissant</h1>
