--- a/photo.html
+++ b/photo.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Photo of delicious crispy croissant" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant photo</title>
+    <title>Delicious croissant foto at Croissant.com</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>A picture of a croissant</h1>
     <img
       src="https://kitchenette.cz/uploads/media/article_image/0001/01/thumb_674_article_image_gridOne.jpg"
-      alt="Picture of croissant"
+      alt="Picture of delicious croissant"
     />
     <a href="index.html">Home page</a>
     <a href="photo.html">Photo</a>
