adding title to link

--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
-    <a href="index.html">Home page</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" title="Home page">Home page</a>
+    <a href="photo.html" title="Croissant photo">Photo</a>
+    <a href="contact.html" title="Contact information">Contact</a>
   </body>
 </html>
