--- a/photo.html
+++ b/photo.html
@@ -14,8 +14,8 @@
       src="https://kitchenette.cz/uploads/media/article_image/0001/01/thumb_674_article_image_gridOne.jpg"
       alt="Picture of delicious croissant"
     />
-    <a href="index.html">Home page</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" title="Home page">Home page</a>
+    <a href="photo.html" title="Croissant photo">Photo</a>
+    <a href="contact.html" title="Contact information">Contact</a>
   </body>
 </html>
