--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <a href="index.html">Home page</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" title="Home page">Home page</a>
+    <a href="photo.html" title="Croissant photo">Photo</a>
+    <a href="contact.html" title="Contact information">Contact</a>
   </body>
 </html>
